# ui-mapper

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: default.yaml
config/apps/: affinity-designer.yaml  autocad.yaml
docs/: ARCHITECTURE.md  MCP_INTEGRATION.md  README.md  ROADMAP.md
docs/adr/: 000-template.md  001-rag-deferred.md  002-languages.md  003-tui-optional.md  004-hardware-watchdog.md
scripts/: migrate_v1_to_v2.py
src/ui_mapper/: __init__.py  __main__.py  cli.py
src/ui_mapper/core/: __init__.py  config.py  profile.py  session.py  types.py  version.py  watchdog.py
src/ui_mapper/mappers/: __init__.py  base.py  llm_knowledge.py  orchestrator.py  uia.py  visual.py
src/ui_mapper/mcp_server/: __init__.py  driver.py  map_loader.py  server.py  tools.py
src/ui_mapper/profiler/: __init__.py
src/ui_mapper/providers/: __init__.py  base.py  gemini.py  hardware.py  manager.py  ollama.py
src/ui_mapper/visual/: __init__.py  coordinates.py  focus.py  snapshots.py  verification.py
tests/: test_mcp_driver.py  test_mcp_map_loader.py  test_mcp_tools.py  test_profile.py  test_types.py  test_version.py  test_visual_coordinates.py  test_visual_focus.py  test_visual_snapshots.py  test_visual_verification.py  test_watchdog.py
